KNOWN BUGS:
* The code sometimes uses timeout_client where it should use a server timeout.
|
20061204a: Changes since 20061010a:
- Bugfix: use proper prototype for mastring.h's mastr_cat.
  Reported by Georg Schwarz.
- Bugfix: if none of the upstream articles can be fetched for a certain
  group, do NOT skip to the next server. Found by Martin Brunzel.

20061010a: Changes since 20060831a:
- Documentation: in leafnode(8)'s section on groupexpire, list the
  precedence information. Found by Clemens Fischer.

20060831a: Changes since 20060826a:
- Change: an empty mail address in the moderators file means "no
  moderator set" and causes leafnode to post the article rather than
  mailing it to the moderator. Useful for gmane when the fallback
  moderator of ISC is set. Suggested by Matěj Cepl.
- Change: Support %% for INN compatibility.
- Documentation: add moderators(5) manual page.

20060826a: Changes since 20060711a:
- Bugfix: handle 400...499 codes in reply to ARTICLE command properly.
  Reported and fix tested by Martin Brunzel.
- Bugfix: if a fatal fetch error occurs, proceed to next server.
- Update: the leafnode.spec.in file was updated to fix rpmbuild issues
  and instruct the packager how the %doc-umentation can be relocated.
  Reported by Kevin Bulgrien.

20060711a: Changes since 20060706a:
- Bugfix: do not leak memory if global configuration parameters that
  read strings are specified more than once. Found by "Stroller".
- Bugfix: do not leak memory if reading new newsgroups fails or if the
  list of newsgroups ends prematurely. Found by "Stroller".

20060706a: Changes since 20060608b:
- Security Bugfix: Fix off-by-one error in getabufferedline().
- Bugfix: On corrupted active files without line breaks, avoid reading
  past the end of the file.
- Bugfix: Do not report "lock file exists" if locking failed for other
  reasons than a pre-existing lock. Found by Troy Piggins.

20060608b: Changes since 20060608a: