@@ -1,6 +1,10 @@
 KNOWN BUGS:
 * The code sometimes uses timeout_client where it should use a server timeout.
 |
+Changes since 20061204a:
+- Documentation: document no_direct_spool in leafnode(8). Found by
+  Reiner Steib.
+
 20061204a: Changes since 20061010a:
 - Bugfix: use proper prototype for mastring.h's mastr_cat.
   Reported by Georg Schwarz.
